--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
       name="description"
       content="Shri Hanumath sametha Shiva Vishnu Temple"
     />
-    <link rel="apple-touch-icon" href=".src/pages/IconImages/Hanuman Logo.jpeg" sizes="144x144"/>
+    <link rel="apple-touch-icon" href="./Hanuman Logo.jpeg"/>
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
