--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
       name="description"
       content="Shri Hanumath sametha Shiva Vishnu Temple"
     />
-    <link rel="icon" href="%PUBLIC_URL%/logo192.png"/>
+    <link rel="icon" href="%PUBLIC_URL%/Hanuman Logo.png"/>
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
